# tinkerbin

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
tests/: test_class_attributes.py  test_function_evaluation.py  test_numpy_tools.py
tinkerbin/: __init__.py  attr_class.py  class_attributes.py  dictionaries.py  function_evaluation.py  io.py  ipython.py  logging.py  numerics_tools.py  parameter_store.py  printing.py  printing_utils.py  timer_utils.py  timers.py  utils.py
tinkerbin/numpy_tools/: array_collection.py  mesh_collection.py  plotting.py
