[project]
name = "tinkerbin"
version = "0.1.0"
description = "A collection of utility tools for scientific computing and data analysis"
authors = [
    { name="Jan Gulla" },
    { name="Odd Cappelen" }
]
readme = "README.md"
license = { text = "LICENSE" }
dependencies = [
    'matplotlib',
    'scipy',
    'ipython',
    'unidecode',
    'numpy',
    'psutil',
    'mpmath',
]

[project.optional-dependencies]
dev = [
    'ruff',
]

[tool.ruff]
# Include specific directories and files for formatting and linting
include = [
    "tinkerbin/**/*.py",
    "tests/**/*.py",
]

line-length = 88
indent-width = 4

target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["E731", "F403"]  # Allow lambda expressions and star imports

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tinkerbin*"]
exclude = ["output*", "examples*", "tests*", ".startpoint*"]